message texts aligned left and image issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@
   }
   
   .message-block {
+    text-align: start;
     width: 100%;
     display: inline-block;
   }
@@ -156,6 +157,7 @@
   }
   
   .message-form-container {
+    text-align: start;
     position: absolute;
     bottom: 0px;
     width: calc(100% - 36px);
